Project4-Roman-numerals-converter/templates/cf.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: CloudFormation Template
  
Parameters:
  myAmiId: 
    Description: Latest version
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64' # '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  myKey:
    Description: Enter your keypair
    Type: AWS::EC2::KeyPair::KeyName
    
  myInstance:
    Description: Choose your instance
    Type: String
    Default: t2.micro
    AllowedValues:
         - t2.micro
         - t2.nano
         - t2.small
  
Resources:

  mySecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http and SSH 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  myEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref myKey
      ImageId: !Ref myAmiId
      InstanceType: !Ref myInstance
     
      SecurityGroupIds:
        - !Ref mySecGroup

      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        FOLDER="https://raw.githubusercontent.com/2973tok/aws-projects/main/Project4-Roman-numerals-converter/templates"
        cd /home/ec2-user
        wget -P templates ${FOLDER}/index.html
        wget -P templates ${FOLDER}/result.html
        wget https://raw.githubusercontent.com/2973tok/aws-projects/main/Project4-Roman-numerals-converter/app.py
        python3 app.py
        
Outputs:
  WebsiteURL:
    Value: !Sub http://${myEC2Instance.PublicIp}
